paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_1/sample_003/target.compile.log
error[E0599]: no method named `try_into` found for slice `[f32]` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_1/sample_003/target.rs:80:37
    |
 80 |     let a: &[f32; 11] = &vla1[..11].try_into().unwrap();
    |                                     ^^^^^^^^
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/convert/mod.rs:622:8
    |
622 |     fn try_into(self) -> Result<T, Self::Error>;
    |        -------- the method is available for `[f32]` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: trait `TryInto` which provides `try_into` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::convert::TryInto;
    |
help: there is a method `into` with a similar name
    |
 80 -     let a: &[f32; 11] = &vla1[..11].try_into().unwrap();
 80 +     let a: &[f32; 11] = &vla1[..11].into().unwrap();
    |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.